aggiunta commenti su js

--- a/jsnack2/index.html
+++ b/jsnack2/index.html
@@ -26,22 +26,22 @@
     <main>
         <section class="container-fluid">
             <div class="row text-center">
-                <div class="col-6">
+                <div class="col-6 border">
                     <h1 id="first-person">
                         la prima parola che hai scelto è:
                     </h1>
                 </div>
-                <div class="col-6">
+                <div class="col-6 border">
                     <h1 id="second-person">
                         la seconda parola che hai scelto è:
                     </h1>
                 </div>
-                <div class="col-6">
+                <div class="col-6 border">
                     <h1 id="max-result">
                         La parola più lunga è:
                     </h1>
                 </div>
-                <div class="col-6">
+                <div class="col-6 border">
                     <h1 id="min-result">
                         La parola più corta è:
                     </h1>
@@ -50,7 +50,7 @@
 
         </section>
     </main>
-    <script type="text/javascript" src="js2.js"></script>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 
 </html>
